--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-sortablejs": "^2.3.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "editable": "^1.1.0",
     "ngx-bootstrap": "^2.0.0-beta.10",
     "rxjs": "^5.5.5",
     "sortablejs": "^1.7.0",
