--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@angular/router": "^5.1.0",
     "angular-drag-and-drop-lists": "^2.1.0",
     "angular-sortablejs": "^2.3.0",
-    "bootstrap": "^3.3.7",
-    "core-js": "^2.4.1",
+    "bootstrap": "^4.0.0-beta.2",
+    "core-js": "^2.5.2",
     "editable": "^1.1.0",
-    "ngx-bootstrap": "^2.0.0-beta.10",
+    "ngx-bootstrap": "^2.0.0-beta.11",
     "rxjs": "^5.5.5",
     "sortablejs": "^1.7.0",
     "zone.js": "^0.8.14"
